--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:staged": "lint-staged"
+    "precommit": "lint-staged"
   },
-  "pre-commit": "lint:staged",
   "lint-staged": {
     "linters": {
-      "src/**/*.{js,jsx,vue}": [ "eslint --ignore-path .gitignore --fix" ]
-    },
-    "ignore": []
+      "*.{js,scss}": [
+        "eslint --fix",
+        "git add"
+      ]
+    }
   },
   "keywords": [],
   "author": "",
@@ -22,9 +22,15 @@
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^5.2.6",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "lint-staged": "^11.0.0",
     "mini-css-extract-plugin": "^2.1.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss": "^8.3.5",
