--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "babel-loader": "^8.0.5",
+    "@babel/core": "^7.14.6",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.14.7",
+    "babel-loader": "^8.2.2",
+    "core-js": "^3.15.2",
     "css-loader": "^5.2.6",
     "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
